# adbControl

./: CMakeLists.txt  README.md
include/adb/: ADBControl.h  KeyEvent.h  LogPlugin.hpp
src/: main.cpp
src/adb/: ADBControl.cpp
